<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="250dip"
	android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"    
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip">
    <LinearLayout android:id="@+id/button_layout" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#fff000"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dip">
		<Button android:id="@+id/okay_button"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/say_yes"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dip"                        
            android:layout_weight="0.5"/>
        <Button android:id="@+id/cancel_button"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/say_no"		
            android:textColor="#ff000000"            
            android:layout_gravity="center_horizontal"            
            android:layout_marginRight="10dip"
            android:layout_weight="0.5"/>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"               
        android:layout_above="@id/button_layout"
        android:background="#fff000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">   	
		<TextView android:id="@+id/title_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"	    
	        android:textSize="15dip"
	        android:text="@string/input_new_solt_menu"
	        android:layout_marginLeft="10dip"
	        android:gravity="center|left"
	        android:layout_gravity="center_vertical|center_horizontal"/>
		<EditText android:id="@+id/edittext_for_title"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:textSize="20dip"
		    android:singleLine="true"
		    android:gravity="left"
		    android:layout_gravity="center_vertical|center_horizontal"
		    android:layout_marginTop="10dip"
		    android:layout_marginLeft="10dip"
		    android:layout_marginRight="10dip"/>
	</LinearLayout>
</RelativeLayout>