<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff" >

        <Button
            android:id="@+id/monthPrevious"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/backward"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/monthText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="MonthView"
            android:textSize="24dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/monthNext"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/forward"
            android:gravity="center_horizontal" />
    </RelativeLayout>
    
    <GridView
        android:id="@+id/title_gridview" 
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:numColumns="7"
        android:listSelector="#00000000"
        />
    
    <com.derek.cashlog.widget.CalendarMonthView
        android:id="@+id/monthView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:id="@+id/bottom_Layout" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff0ff"
        android:weightSum="100"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:background="#ffff00"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/detail_text" />

            <ScrollView
                android:id="@+id/scrollView"
                android:background="#ff00ff"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </ScrollView>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#fff000"
            android:layout_weight="40"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/bottom_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_weight="1"
                    android:id="@+id/detail_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_button" />

                <Button
                    android:id="@+id/new_button"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_button" />

            </LinearLayout>
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="80dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/whole_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/sum_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sum_textview" />

                <TextView
                    android:id="@+id/number_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="27,000" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>