<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20dp"
        android:text="@string/input_textview" />
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/center_dayview"
            android:orientation="horizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/text_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="년" />

            <TextView
                android:id="@+id/text_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="월" />

            <TextView
                android:id="@+id/text_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="일" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_toRightOf="@+id/center_dayview"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/forward" />

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_toLeftOf="@+id/center_dayview"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/backward" />

    </RelativeLayout>
    
    <View 
        android:id="@+id/first_line"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="@null"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d3d3d3">

            <TextView
                android:id="@+id/text_use_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:text="@string/txt_use_log" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_use_log"
                android:orientation="vertical" >
              <EditText
                android:id="@+id/edit_input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
            </LinearLayout>

        </RelativeLayout>
        
        <View 
        android:id="@+id/blank_first_line"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@null"/>
        
        <RelativeLayout
            android:id="@+id/second_container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d3d3d3">

            <TextView
                android:id="@+id/text_use_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:text="@string/txt_use_cash" />
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_use_cost"
                android:orientation="vertical" >
              <EditText
                android:id="@+id/edit_input_cost"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="23dp" />
            </LinearLayout>

        </RelativeLayout>
        
        <View 
        android:id="@+id/blank_first_line"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@null"/>
        
         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d3d3d3">

            <TextView
                android:id="@+id/text_use_sortt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:text="@string/txt_solt" />
			
               <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_use_sortt"
                android:orientation="vertical" >
              
                <Spinner
                android:id="@+id/edit_spinner"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                />
            </LinearLayout>
            
			

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
